--- a/index.html
+++ b/index.html
@@ -3,19 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Timer</title>
+    <title>Stopwatch</title>
     <script src="./src/timer.js"></script>
+    <link href="./images/icon.png" rel="icon" type="image/png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <h1>
-      <span id="hour">00</span> : <span id="min">00</span> :
-      <span id="sec">00</span>
-    </h1>
+    <header>
+      <div id="header-container">
+        <div id="header" class="container">
+          <div id="logo">
+            <img src="./images/icon.png" width="100px" height="100px" />
+            <h2 id="header-h1">StopWatch</h2>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="watch">
+      <h1 id="digits">
+        <span id="hour">00</span> : <span id="min">00</span> :
+        <span id="sec">00</span>
+      </h1>
 
-    <button onclick="start()" id="start">Start</button>
-    <button onclick="stop()" id="stop">Stop</button>
-    <button onclick="reset()">Reset</button>
+      <button onclick="start()" id="start">Start</button>
+      <button onclick="stop()" id="stop">Stop</button>
+      <button onclick="reset()">Reset</button>
 
-    <p id="message"></p>
+      <p id="message"></p>
+    </div>
+    <footer>
+      <div id="copyright">
+        <p>&copy; ShAaGGy. All rights reserved. | Design by Sagar Vartak</p>
+        <ul class="contact">
+          <li>
+            <a href="#"><span class="fa fa-twitter fa-2x"></span></a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-facebook fa-2x"></span></a>
+          </li>
+          <li>
+            <a href="#"><span class="fa fa-instagram fa-2x"></span></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
