added morning image for theme
added sound for warning

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
           <div id="logo">
             <img src="./images/icon.png" width="100px" height="100px" />
             <h2 id="header-h1">StopWatch</h2>
+            <span onclick="myFunction(this)" class="fa fa-sun-o fa-2x"></span>
           </div>
         </div>
+        <!-- <button onclick="myFunction()">Toggle dark mode</button> -->
       </div>
     </header>
     <div class="watch">
@@ -40,12 +42,12 @@
           <a title="start">Start</a>
         </li>
         <li onclick="stop()" id="stop">
-          <a title="stop">Stop</a>
+          <a title="Pause">Pause</a>
         </li>
         <li onclick="reset()"><a title="reset">Reset</a></li>
       </ul>
     </div>
-    <footer>
+    <footer class="footer">
       <div id="copyright">
         <p>&copy; ShAaGGy. All rights reserved. | Design by Sagar Vartak</p>
         <ul class="contact">
